Fix card width on mobile

--- a/public/styles/info.css
+++ b/public/styles/info.css
@@ -18,16 +18,6 @@ li h3 strong {
 	animation: pulse 4s ease-in-out infinite;
 }
 
-@keyframes pulse {
-    0%,
-    100% {
-        background-position-y: 0%;
-    }
-    50% {
-        background-position-y: 80%;
-    }
-}
-
 .subtitle {
     opacity: 0.5;
     font-size: 75%;
@@ -44,7 +34,6 @@ li h3 strong {
     display: block;
     border-radius: 0.5em;
     width: fit-content;
-    min-width: 30em;
     max-width: 60em;
 }
 
